# rolemule

./: .coveragerc  .cursorrules  .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  README.md  SECURITY.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: __init__.py  company_research.py  cover_letter_writer.py  cv_optimizer_loop.py  followup_generator.py  hiring_manager.py  hiring_outreach.py  interview_prep.py  job_analyzer.py  job_comparison.py  mock_interview.py  profile_matching.py  reference_request_writer.py  rejection_analyzer.py  resume_advisor.py  salary_coach.py  thank_you_writer.py
api/: __init__.py  admin.py  applications.py  auth.py  cv_optimizer.py  extension_autofill.py  extension_autofill_models.py  extension_autofill_rules.py  hiring_outreach.py  interview_prep.py  mock_interview.py  profile.py  tools.py  websocket.py  workflow.py
applypilot_client/: client.py  constants.py  polling.py
cli/: __init__.py  admin_visibility.py  config.py  context.py  main.py  output.py  pager.py  tool_schemas.py  util.py  workflow_output.py  workflow_watch.py
config/: __init__.py  settings.py
docs/: cli-implementation-plan.md  cli-reference.md  clone-stats.json  company-research-improvement-plan.md  frontend-vite-typescript-migration-plan.md  hiring-outreach-web-plan.md  llm-provider-abstraction-plan.md  (+1 more)
(+621 files in other folders)
