[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rolemule"
version = "0.0.0"
description = "RoleMule — AI job application assistant (server + CLI client)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
rolemule = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "rolemule_client*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
